# ilya-murzinov.github.io

./: .gitignore  CNAME  Gemfile  README.md  _config.yml  blog.cabal  deploy.sh  index.html  stack.yaml
_data/: navigation.yml
_drafts/: 2015-02-25-allure-csharp.markdown  2015-03-01-spring-boot-jboss.markdown
_includes/: scripts.html
_posts/: 2015-02-23-hello-world.markdown  2015-02-23-hello-world.markdown~  2015-02-25-allure-csharp.markdown  2015-03-03-spring-boot-jboss.markdown  2015-03-04-algorithms-part-one.markdown  2015-03-12-ocjp.markdown  2015-03-18-shortest-coursera-course-ever.markdown  2015-05-01-its-scala-time.markdown  2015-06-30-wail-v0-7-3-release.markdown
_templates/: post  post~
about/: index.html  index.md
app/: site.hs
articles/: index.md
articles/allure-csharp/: index.html
articles/spring-boot-jboss/: index.html
blog/: index.md
blog/algorithms-part-one/: index.html
blog/hello-world/: index.html
blog/its-scala-time/: index.html
blog/ocjp/: index.html
blog/shortest-coursera-course-ever/: index.html
blog/wail-v0-7-3-release/: index.html
content/: about.markdown  about.md  internal.md  speech.md  talks.markdown  talks.md
content/slides/: scalaspb.md  scalaspb2017.md  scalaspb2018.md
css/: all.css  default.css  hack-subset.css  syntax.css
internal/: index.html
slides/scalaspb/: index.html
slides/scalaspb2017/: index.html
slides/scalaspb2018/: index.html
src/: constants.hs  site.hs
talks/: index.html
templates/: default.html  post-list.html  post.html  slides.html  teaser.html
(+14 files in other folders)
