name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

library
  hs-source-dirs:      src
  exposed-modules:     Constants
  build-depends:    base >= 4.7 && < 5

executable site
  main-is:          app/site.hs
  build-depends:    base
                  , blog
                  , hakyll
                  , pandoc
                  , split
                  , filepath
  ghc-options:      -Wall -threaded
  default-language: Haskell2010
